--- a/SITE DE PREZENTARE/HTML/Index.HTML
+++ b/SITE DE PREZENTARE/HTML/Index.HTML
@@ -16,7 +16,7 @@
             <div class="grid-container">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="../HTML/Principala.HTML" class="nav-link">
+                        <a href="../HTML/Index.HTML" class="nav-link">
                             <i class="fa-solid fa-house"></i>
                             <span class="link-text">Home</span> 
                         </a>
