al 5 lea commit

--- a/HTML/Projects.HTML
+++ b/HTML/Projects.HTML
@@ -13,7 +13,7 @@
         <div class="grid-container">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="../HTML/Index.HTML" class="nav-link">
+                    <a href="../Index.HTML" class="nav-link">
                         <i class="fa-solid fa-house"></i>
                         <span class="link-text">Home</span> 
                     </a>
