--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -13,7 +13,7 @@
         <div class="grid-container">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="../HTML/Principala.HTML" class="nav-link">
+                    <a href="../Index.HTML" class="nav-link">
                         <i class="fa-solid fa-house"></i>
                         <span class="link-text">Home</span> 
                     </a>
@@ -27,7 +27,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="/HTML/Projects.HTML" class="nav-link">
+                    <a href="../HTML/Projects.HTML" class="nav-link">
                         <i class="fa-solid fa-folder-open"></i>
                         <span class="link-text">Project portofolio</span>
                     </a>
