--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/styleCv.css">
+    <link rel="stylesheet" href="../CSS/styleCv.css">
     <script src="https://kit.fontawesome.com/6b104b7f61.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="grid-container">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="../Index.HTML" class="nav-link">
+                    <a href="../HTML/Index.HTML" class="nav-link">
                         <i class="fa-solid fa-house"></i>
                         <span class="link-text">Home</span> 
                     </a>
@@ -45,7 +45,7 @@
                 <p><span>&nbsp</span> I am an extroverted person, with the desire to learn and develop. Curiosity and punctuality define me, and resilience, 
                     dedication and altruism describe me very well.</p>
             </div>
-            <div class="descSecondDiv"><img src="/Poza/Profil.JPG" alt="da"></div>
+            <div class="descSecondDiv"><img src="../Poza/Profil.JPG" alt="da"></div>
         </header>
 
         <section class="personalDetails">
