--- a/Projects/Hero Story/Hero.html
+++ b/Projects/Hero Story/Hero.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Projects/Hero Story/style.css">
+    <link rel="stylesheet" href="../Hero Story/style.css">
 </head>
 <body>
 
@@ -179,6 +179,6 @@
         </section>
     </main>
 
-    <script src="/Projects/Hero Story/test.js"></script>
+    <script src="../Hero Story/test.js"></script>
 </body>
 </html>
