--- a/Projects/Review Carousel/index.html
+++ b/Projects/Review Carousel/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Review Carousel</title>
-    <link rel="stylesheet" href="/Projects/Review Carousel/style.css">
+    <link rel="stylesheet" href="../Review Carousel/style.css">
 </head>
 <body>
     <main class="container">
@@ -31,6 +31,6 @@
         </div>
     </main>
 
-   <script src="/main.js"></script> 
+   <script src="../Review Carousel/main.js"></script> 
 </body>
 </html>
