--- a/HTML/Index.HTML
+++ b/HTML/Index.HTML
@@ -16,21 +16,21 @@
             <div class="grid-container">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="/SITE DE PREZENTARE/Index.HTML" class="nav-link">
+                        <a href="Index.HTML" class="nav-link">
                             <i class="fa-solid fa-house"></i>
                             <span class="link-text">Home</span> 
                         </a>
                     </li>
     
                     <li class="nav-item">
-                        <a href="../SITE DE PREZENTARE/HTML/cv.html" class="nav-link">
+                        <a href="../HTML/cv.html" class="nav-link">
                             <i class="fa-solid fa-id-card"></i>
                             <span class="link-text">CV</span>
                         </a>
                     </li>
     
                     <li class="nav-item">
-                        <a href="../SITE DE PREZENTARE/HTML/Projects.HTML" class="nav-link">
+                        <a href="../HTML/Projects.HTML" class="nav-link">
                             <i class="fa-solid fa-folder-open"></i>
                             <span class="link-text">Project portofolio</span>
                         </a>
