--- a/HTML/Projects.HTML
+++ b/HTML/Projects.HTML
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/projectsStyle.css">
+    <link rel="stylesheet" href="../CSS/projectsStyle.css">
     <script src="https://kit.fontawesome.com/6b104b7f61.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="grid-container">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="../Index.HTML" class="nav-link">
+                    <a href="../HTML/Index.HTML" class="nav-link">
                         <i class="fa-solid fa-house"></i>
                         <span class="link-text">Home</span> 
                     </a>
@@ -75,9 +75,9 @@
                 </div>
                 <div class="siteBG">
                     <div class="siteBG">
-                        <a href="/Projects/Army Game/Army.html">
+                        <a href="../Projects/Army Game/Army.html">
                             <div class="img"><img src="#" alt="#"></div>
-                            <div class="title"><p>RBG Generator</p></div>
+                            <div class="title"><p>Army Game</p></div>
                         </a>
                 </div>
             </div>
