--- a/Projects/Army Game/Army.html
+++ b/Projects/Army Game/Army.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="/Projects/Army Game/styles.css">
+    <link rel="stylesheet" href="../Army Game/styles.css">
     <title>Army Game</title>
     
 </head>
@@ -103,7 +103,7 @@
         </div>
       
     </main>
-    <script src="/Projects/Army Game/main.js"></script>
+    <script src="../Army Game/main.js"></script>
 </body>
 </html>
 
