--- a/Projects/Pizza Site/html/main.html
+++ b/Projects/Pizza Site/html/main.html
@@ -25,20 +25,44 @@
             </div>
         </nav>
         <nav class="drop_down dF" id="drop_down">
-            <div class="dis_none"><a href="#">Conectare</a></div>
-            <div class="dis_none"><a href="/html/main.html">Acasa</a></div>
-            <div class="dis_none"><a href="#">Restaurante</a></div>
-            <div class="dis_none"><a href="#">Despre</a></div>
-            <div class="dis_none"><a href="#">Promotii</a></div>
+            <div class="cont">
+                <div class="dis_none"><a href="#">Conectare</a></div>
+                <div class="dis_none"><a href="/html/main.html">Acasa</a></div>
+                <div class="dis_none"><a href="#">Restaurante</a></div>
+                <div class="dis_none"><a href="#">Despre</a></div>
+                <div class="dis_none"><a href="#">Promotii</a></div>
+            </div>
         </nav>
     </header>
 
     <section class="carusel">
-
+        <div class="caruselFoto">
+            <div class="mySlides fade">
+                <img src="https://source.unsplash.com/random/636x226" >
+            </div>
+            <div class="mySlides fade">
+                <img src="https://source.unsplash.com/random/1265x360" >
+            </div>
+            <div class="mySlides fade">
+                <img src="https://source.unsplash.com/random/1266x360" >
+            </div>
+        </div class="dotContainer">
+            
+        <div>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
     </section>
 
-    <main>
-
+    <main class="mainContent">
+        <div><h1>Incearca noile nostre produse</h1></div>
+        <div class="mainConstainer">
+            <div class="element"><img src="https://source.unsplash.com/random/200x150" alt=""></div>
+            <div class="element"><img src="https://source.unsplash.com/random/200x150" alt=""></div>
+            <div class="element"><img src="https://source.unsplash.com/random/200x150" alt=""></div>
+            <div class="element"><img src="https://source.unsplash.com/random/200x150" alt=""></div>
+        </div>
     </main>
 
     <footer>
