--- a/HTML/Projects.HTML
+++ b/HTML/Projects.HTML
@@ -82,7 +82,7 @@
                    
                 </div>
                 <div class="siteBG">
-                    <a href="#">
+                    <a href="../Projects/Paint/index.html">
                         <div class="img"><img src="#" alt="#"></div>
                         <div class="title"><p>Paint</p></div>
                     </a>
