--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -66,8 +66,9 @@
                     <div class="subTitle"><h3>Software Development Academy</h3></div>
                     <div>
                         <p class="year">2022 - Present</p>
-                        <p>A paid boot camp where I learn and develop my skills in HTML ,CSS and
+                        <p>A paid boot camp where I learn and develop my skills in HTML, CSS and
                             JavaScript</p>
+                            <a href="https://sdacademy.ro/?utm_source=Google&utm_medium=CPC&utm_campaign=Brand&utm_term=sda-Exact&gclid=Cj0KCQjwxMmhBhDJARIsANFGOSvgtc4oX_fC1d49RriDGc3WoFBffeH86__eneg44G4exmTx2BsrvJwaArynEALw_wcB">Software Developer Academy link to the site</a>
                     </div>  
                     <div>
                         <h3 class="subTitle">High school</h3>
